2008-06-19  Christian Persch  <chpe@gnome.org>

	* docs/reference/gtk/gtk-sections.txt:
	* gtk/gtk.symbols:
	* gtk/gtkclipboard.c:
	* gtk/gtkclipboard.h: Add clipboard convenience functions  for URI 
	targets. Bug #537639.

2008-06-19  Christian Persch  <chpe@gnome.org>

        * gtk/gtkfilechooserdefault.c: Use gtk_drag_*_add_*_targets instead of
	hardcoded target tables. Bug #516092.

2008-06-19  Christian Persch  <chpe@gnome.org>

	* gdk-pixbuf/gdk-pixbuf-io.c:
	* gdk-pixbuf/gdk-pixdata.c:
	* gdk-pixbuf/io-ani.c:
	* gdk-pixbuf/io-bmp.c:
	* gdk-pixbuf/io-gdip-utils.c:
	* gdk-pixbuf/io-gif.c:
	* gdk-pixbuf/io-icns.c:
	* gdk-pixbuf/io-ico.c:
	* gdk-pixbuf/io-jasper.c:
	* gdk-pixbuf/io-jpeg.c:
	* gdk-pixbuf/io-pcx.c:
	* gdk-pixbuf/io-png.c:
	* gdk-pixbuf/io-pnm.c:
	* gdk-pixbuf/io-ras.c:
	* gdk-pixbuf/io-tga.c:
	* gdk-pixbuf/io-tiff.c:
	* gdk-pixbuf/io-wbmp.c:
	* gdk-pixbuf/io-xbm.c:
	* gdk-pixbuf/io-xpm.c:
	* gtk/gtkfilechooserdefault.c:
	* gtk/gtkfilesystemmodel.c:
	* gtk/gtkiconfactory.c:
	* gtk/gtkicontheme.c:
	* gtk/gtkmain.c:
	* gtk/gtkpagesetup.c:
	* gtk/gtkpapersize.c:
	* gtk/gtkprintoperation-win32.c:
	* gtk/gtktextbufferserialize.c:
	* tests/testfilechooser.c: Use g_set_error_literal where appropriate. Bug #538640.

	* configure.in: Update glib requirement to 2.17.3.

2008-06-19  Johan Dahlin  <jdahlin@async.com.br>

	* demos/testpixbuf.c (new_testrgb_window):
	* gtk/gtkctree.c (gtk_ctree_new_with_titles):
	* gtk/gtkitemfactory.c (gtk_item_factory_construct),
	(gtk_item_factory_create_item):
	* gtk/gtkmenu.c (gtk_menu_set_tearoff_state):
	* gtk/gtkprogressbar.c (gtk_progress_bar_new),
	(gtk_progress_bar_new_with_adjustment):
	* gtk/gtkscrolledwindow.c (gtk_scrolled_window_new):
	* gtk/gtktext.c (gtk_text_new):
	* gtk/gtkviewport.c (gtk_viewport_new):
	* tests/simple.c (main):
	* tests/testgtk.c (create_statusbar), (create_get_image),
	(create_saved_position), (create_tooltips), (create_cursors),